feat: implement supabase integration

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ PrivadaReforma_Feedback_Template.csv
 PrivadaReforma_OnePager_Executivo_ES.pdf
 PrivadaReforma_PRD_Residentes_ES.pdf
 PrivadaReforma_PRD_v1_es.pdf
+HANDOFF_PROMPT.md
