Add_web_push_notifications_and_community_marketplace_module

--- a/privada-reforma-web/supabase/config.toml
+++ b/privada-reforma-web/supabase/config.toml
@@ -2,3 +2,12 @@ project_id = "nmsxkgryxnhmoqwmcgfj"
 
 [functions.admin-create-user]
 verify_jwt = false
+
+[functions.send-user-push]
+verify_jwt = false
+
+[functions.emit-domain-push]
+verify_jwt = false
+
+[functions.admin-send-push]
+verify_jwt = false
